# core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt  binary.cpp  binary.h  init.cpp  init.h
core/common/: init.h  log.h
core/proto/: codec.cpp
core/protobuf/: codec.cpp  codec.h
src/: CMakeLists.txt  main.cpp
